--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "clsx": "^1.1.1",
     "react-player": "^2.5.0",
     "react-router-dom": "^5.2.0"
