--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,8 +43,10 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "clsx": "^1.1.1",
+    "react-hook-form": "^6.0.8",
     "react-material-ui-form-validator": "^2.0.10",
     "react-player": "^2.5.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "yup": "^0.29.1"
   }
 }
