--- a/booster-app/pom.xml
+++ b/booster-app/pom.xml
@@ -86,6 +86,7 @@
     </dependencies>
 
     <build>
+        <finalName>moodBoost</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
