--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,14 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
+    "clsx": "^1.1.1",
+    "react-hook-form": "^6.0.8",
+    "react-material-ui-form-validator": "^2.0.10",
+    "react-player": "^2.5.0",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,15 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.10.0",
-    "clsx": "^1.1.1",
-    "react-hook-form": "^6.0.8",
-    "react-material-ui-form-validator": "^2.0.10",
-    "react-player": "^2.5.0",
-    "react-router-dom": "^5.2.0",
-    "yup": "^0.29.1"
   }
+
 }
